--- a/PokerChips/View/Base.lproj/Main.storyboard
+++ b/PokerChips/View/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -203,34 +204,26 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wi-bP-dit">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7wi-bP-dit">
                                 <rect key="frame" x="469" y="257" width="11" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vdv-Ji-SDe">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vdv-Ji-SDe">
                                 <rect key="frame" x="189" y="257" width="11" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="bSQ-xs-aDl">
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="bSQ-xs-aDl">
                                 <rect key="frame" x="427" y="286" width="94" height="29"/>
                             </stepper>
-                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="HvB-1e-Plp">
+                            <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="HvB-1e-Plp">
                                 <rect key="frame" x="145" y="288" width="94" height="29"/>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Max Buy-in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LV4-E9-Qkj">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Max Buy-in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LV4-E9-Qkj">
                                 <rect key="frame" x="151" y="228" width="87" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Big Blinds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-aX-otE">
-                                <rect key="frame" x="437" y="228" width="76" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -253,16 +246,20 @@
                             <stepper opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" maximumValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="ss6-Su-W4q">
                                 <rect key="frame" x="145" y="157" width="94" height="29"/>
                             </stepper>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Min Buy-in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg8-me-66k">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min Buy-in" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hg8-me-66k">
                                 <rect key="frame" x="153" y="97" width="83" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Small Blinds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgS-XM-A4a">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Small Blinds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dgS-XM-A4a">
                                 <rect key="frame" x="428" y="97" width="93" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Big Blinds" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkL-aX-otE">
+                                <rect key="frame" x="436" y="228" width="76" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -270,12 +267,21 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="HvB-1e-Plp" firstAttribute="leading" secondItem="guu-f4-wPn" secondAttribute="leading" constant="150" id="0p6-iW-pKG"/>
-                            <constraint firstItem="guu-f4-wPn" firstAttribute="bottom" secondItem="bSQ-xs-aDl" secondAttribute="bottom" constant="152" id="6o1-rg-WMB"/>
+                            <constraint firstItem="HvB-1e-Plp" firstAttribute="leading" secondItem="guu-f4-wPn" secondAttribute="leading" constant="145" id="0p6-iW-pKG"/>
+                            <constraint firstItem="Vdv-Ji-SDe" firstAttribute="top" secondItem="LV4-E9-Qkj" secondAttribute="bottom" constant="8" id="1u9-eL-vzV"/>
+                            <constraint firstItem="guu-f4-wPn" firstAttribute="trailing" secondItem="DkL-aX-otE" secondAttribute="trailing" constant="155" id="3SK-ra-m3a"/>
+                            <constraint firstItem="O0w-zX-mCy" firstAttribute="top" secondItem="Hg8-me-66k" secondAttribute="bottom" constant="8" id="6V9-nC-xCK"/>
+                            <constraint firstItem="guu-f4-wPn" firstAttribute="bottom" secondItem="bSQ-xs-aDl" secondAttribute="bottom" constant="60" id="6o1-rg-WMB"/>
                             <constraint firstItem="Z65-Hf-Pwm" firstAttribute="top" secondItem="IT6-bI-BkQ" secondAttribute="bottom" constant="8" id="M0s-pS-moW"/>
-                            <constraint firstItem="guu-f4-wPn" firstAttribute="bottom" secondItem="HvB-1e-Plp" secondAttribute="bottom" constant="150" id="Qbh-Mt-jkm"/>
-                            <constraint firstItem="guu-f4-wPn" firstAttribute="trailing" secondItem="bSQ-xs-aDl" secondAttribute="trailing" constant="141" id="Se8-O8-ghr"/>
+                            <constraint firstItem="dgS-XM-A4a" firstAttribute="top" secondItem="guu-f4-wPn" secondAttribute="top" constant="97" id="O5b-ef-F88"/>
+                            <constraint firstItem="7wi-bP-dit" firstAttribute="firstBaseline" secondItem="DkL-aX-otE" secondAttribute="baseline" constant="28.5" id="OOL-PU-g2Z"/>
+                            <constraint firstItem="guu-f4-wPn" firstAttribute="bottom" secondItem="HvB-1e-Plp" secondAttribute="bottom" constant="58" id="Qbh-Mt-jkm"/>
+                            <constraint firstItem="guu-f4-wPn" firstAttribute="trailing" secondItem="bSQ-xs-aDl" secondAttribute="trailing" constant="146" id="Se8-O8-ghr"/>
+                            <constraint firstItem="IT6-bI-BkQ" firstAttribute="top" secondItem="dgS-XM-A4a" secondAttribute="bottom" constant="8" id="Tqh-pe-YtD"/>
+                            <constraint firstItem="Hg8-me-66k" firstAttribute="leading" secondItem="guu-f4-wPn" secondAttribute="leading" constant="153" id="Z4S-u8-ptg"/>
+                            <constraint firstItem="guu-f4-wPn" firstAttribute="trailing" secondItem="dgS-XM-A4a" secondAttribute="trailing" constant="146" id="fT5-Go-Kzc"/>
                             <constraint firstItem="ss6-Su-W4q" firstAttribute="top" secondItem="O0w-zX-mCy" secondAttribute="bottom" constant="10" id="hsW-xW-Nra"/>
+                            <constraint firstItem="Hg8-me-66k" firstAttribute="top" secondItem="guu-f4-wPn" secondAttribute="top" constant="97" id="nqO-PS-2Jz"/>
                             <constraint firstItem="HvB-1e-Plp" firstAttribute="top" secondItem="Vdv-Ji-SDe" secondAttribute="bottom" constant="10" id="qcj-U1-hfy"/>
                             <constraint firstItem="bSQ-xs-aDl" firstAttribute="top" secondItem="7wi-bP-dit" secondAttribute="bottom" constant="8" id="xKr-6Z-1tJ"/>
                         </constraints>
@@ -286,7 +292,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MsZ-OC-rn5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="361" y="449"/>
+            <point key="canvasLocation" x="360.80000000000001" y="448.42578710644682"/>
         </scene>
     </scenes>
 </document>
